--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+  scroll-behavior: smooth;
+}
+
+
 .App {
   text-align: center;
 }
