--- a/src/css/ListItem.css
+++ b/src/css/ListItem.css
@@ -1,5 +1,32 @@
 .item-Root {
     background-color: grey;
-    height: 100%;
+    height: fit-content;
     width: 100%;
+    margin-top: 2.5px;
+    margin-bottom: 2.5px;
+}
+.item-Main {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.itemImage { 
+    grid-area: 1 / 1 / 4 / 3;
+    background-color: khaki; 
+}
+.itemTitle { 
+    grid-area: 1 / 3 / 3 / 6; 
+    background-color: rgb(143, 240, 140);
+}
+.itemSearch { 
+    grid-area: 3 / 3 / 4 / 6; 
+    background-color: rgb(140, 195, 240);
+}
+.itemReview { 
+    grid-area: 4 / 1 / 6 / 6; 
+    background-color: rgb(240, 140, 235);
 }
