--- a/src/css/App.css
+++ b/src/css/App.css
@@ -12,6 +12,8 @@
   text-align: center;
   height: 100vh;
   max-height: 100vh;
+  width: 100vw;
+  max-width: 100vw;
   background-color: #282c34;
 }
 
