--- a/src/css/List.css
+++ b/src/css/List.css
@@ -2,9 +2,8 @@
     border-radius: 10px;
     display: grid;
     height: 95vh;
-    width: 800px;
     min-width: 400px;
-    max-width: 800px;
+    width: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(10, 1fr);
     background-color: white;
