Installed Axios. Generated Twitch API key, testing IGDB API.

--- a/src/css/List.css
+++ b/src/css/List.css
@@ -10,7 +10,7 @@
     border: solid black 1px;
     overflow-y: scroll;
 }
-.list-Header {
+/*.list-Header {
 
 }
 .list-Main {
@@ -18,4 +18,4 @@
 }
 .list-Footer {
 
-}
+}*/
