--- a/src/css/ListItem.css
+++ b/src/css/ListItem.css
@@ -25,6 +25,7 @@
 .itemSearch { 
     grid-area: 3 / 3 / 4 / 6; 
     background-color: rgb(140, 195, 240);
+    cursor: pointer;
 }
 .itemReview { 
     grid-area: 4 / 1 / 6 / 6; 
