Search now returns cover, summary, and title. Created basic mockup of search results area.

--- a/src/css/Social.css
+++ b/src/css/Social.css
@@ -1,6 +1,7 @@
-.social-Root{
+.resultRoot{
     background-color: rgb(65, 78, 141);
     color: white;
-    max-height: 35%;
+    max-height: 50%;
     border-radius: 10px;
+    overflow-y: scroll;
 }
