Styilized popper results. Linked images for game covers.

--- a/src/css/ListItem.css
+++ b/src/css/ListItem.css
@@ -6,12 +6,12 @@
     margin-bottom: 2.5px;
     min-height: 300px;
 }
-.item-Root:active {
-    cursor: grabbing;
-}
 .item-Header {
     cursor: grab;
     background-color: rgb(192, 140, 240);
+}
+.item-Header:active {
+    cursor: grabbing;
 }
 .item-Main {
     display: grid;
