--- a/src/css/Social.css
+++ b/src/css/Social.css
@@ -1,7 +1,6 @@
-.resultRoot{
+.social-Root{
     background-color: rgb(65, 78, 141);
     color: white;
     max-height: 50%;
     border-radius: 10px;
-    overflow-y: scroll;
 }
