--- a/src/css/ListItem.css
+++ b/src/css/ListItem.css
@@ -15,29 +15,33 @@
 }
 .item-Main {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
+    height: 15em;
+    width: 100%;
 }
 .itemImage { 
-    grid-area: 1 / 1 / 4 / 3;
+    grid-area: 1 / 1 / 6 / 4;
     background-color: khaki;
     height: 100%;
     width: 100%;
 }
 .itemTitle { 
-    grid-area: 1 / 3 / 3 / 6; 
+    grid-area: 2 / 4 / 6 / 8;
     background-color: rgb(143, 240, 140);
+    overflow-y: scroll;
 }
 .itemSearch { 
-    grid-area: 3 / 3 / 4 / 6; 
+    grid-area: 1 / 4 / 2 / 8;
     background-color: rgb(140, 195, 240);
     cursor: text;
 }
 .itemReview { 
-    grid-area: 4 / 1 / 6 / 6; 
+    grid-area: 6 / 1 / 9 / 8;
     background-color: rgb(240, 140, 235);
+    cursor: text;
 }
