Made it so you can add listItems manually.

--- a/src/css/List.css
+++ b/src/css/List.css
@@ -10,12 +10,17 @@
     border: solid black 1px;
     overflow-y: scroll;
 }
-/*.list-Header {
+.list-Header {
 
+}
+.createBtn { 
+    height: 4em;
+    width: 4em;
+    cursor: pointer;
 }
 .list-Main {
 
 }
 .list-Footer {
 
-}*/
+}
