--- a/src/css/App.css
+++ b/src/css/App.css
@@ -21,6 +21,7 @@
   color: white;
 }
 .App-main {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap
 }
