--- a/src/css/List.css
+++ b/src/css/List.css
@@ -1,9 +1,11 @@
 .list-Root {
+    margin: 0;
+    padding: 0;
     border-radius: 10px;
     display: grid;
     height: 95vh;
     min-width: 400px;
-    width: 100%;
+    width: 70%;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(10, 1fr);
     background-color: white;
