--- a/src/css/Explore.css
+++ b/src/css/Explore.css
@@ -6,7 +6,7 @@
 .explore-Main {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fit, 20rem);
+    grid-template-columns: repeat(5, 1fr);
     overflow-y: scroll;
 }
 
