--- a/src/css/Explore.css
+++ b/src/css/Explore.css
@@ -2,6 +2,10 @@
     height: 95vh;
     width: 100%;
 }
+h3 {
+    font-size: 25px;
+    color: #ffffff;
+}
 
 .explore-Main {
     display: grid;
@@ -15,4 +19,15 @@
     padding: 5px;
     margin: 5px;
     cursor: pointer;
+}
+button {
+    padding: 5px 15px;
+	margin: 0.5em;
+	background: #ffffff;
+	border: 0;
+	border-radius: 5px;
+	font-size: 25px;
+    text-decoration: none;
+    cursor: pointer;
+    color: #000000;
 }
