--- a/src/css/Explore.css
+++ b/src/css/Explore.css
@@ -23,7 +23,7 @@ h3 {
 button {
     padding: 5px 15px;
 	margin: 0.5em;
-	background: #ffffff;
+	background: #2359be;
 	border: 0;
 	border-radius: 5px;
 	font-size: 25px;
