--- a/src/css/ListWebpage.css
+++ b/src/css/ListWebpage.css
@@ -1,5 +1,47 @@
 .webpage-Root{
     background-color: white;
-    height: 400px;
+    height: 95vh;
     width: 100%;
+}
+.webpage-Data {
+    display: grid;
+    background-color: rgb(54, 75, 145);
+    overflow-y: scroll;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 1fr);
+
+}
+.listItem-Root {
+    background-color: grey;
+    height: fit-content;
+    width: 100%;
+    margin-top: 2.5px;
+    margin-bottom: 2.5px;
+    min-height: 300px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+}
+.listItem-Cover {
+    grid-area: 1 / 1 / 9 / 4;
+    background-color: rgb(240, 147, 140);
+    cursor: pointer;
+}
+.listItem-Title {
+    grid-area: 1 / 4 / 3 / 9;
+    background-color: rgb(140, 195, 240);
+    cursor: text;
+}
+.listItem-Author {
+    grid-area: 3 / 4 / 4 / 9;
+    background-color: rgb(240, 213, 140);
+    cursor: text;
+}
+.listItem-Review {
+    grid-area: 4 / 4 / 9 / 9;
+    overflow-y: scroll;
+    background-color: rgb(240, 140, 235);
+    cursor: text;
 }
