--- a/src/css/Explore.css
+++ b/src/css/Explore.css
@@ -1,22 +1,28 @@
 .explore-Root{
     height: 95vh;
     width: 100%;
-}
-.completeList h3 {
-    font-size: 25px;
-    color: #ffffff;
+    background-color: #1b253a;
+    color: white;
+    font-size: 1.4rem;
 }
 
 .explore-Main {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 6px;
+    grid-row-gap: 6px;
     overflow-y: scroll;
 }
 
 .completeList {
-    background-color: white;
+    background-color: #394e7c;
+    color: white;
+    font-size: 1.4rem;
+    text-decoration: none;
     padding: 5px;
     margin: 5px;
+    border-radius: 5px;
     cursor: pointer;
 }
