--- a/src/css/List.css
+++ b/src/css/List.css
@@ -13,7 +13,16 @@
     overflow-y: scroll;
 }
 .list-Header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #293e6d;
+    color: white;
+    font-size: 1.4rem;
+}
+.list-Header img {
 
+    font-size: 1rem;
 }
 .createBtn { 
     height: 4em;
