--- a/src/css/Explore.css
+++ b/src/css/Explore.css
@@ -8,7 +8,7 @@
 
 .explore-Main {
     display: grid;
-    grid-auto-flow: column;
+    grid-auto-flow: row;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-column-gap: 6px;
