--- a/src/css/ListWebpage.css
+++ b/src/css/ListWebpage.css
@@ -5,6 +5,7 @@
 .webpage-Main {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     background-color: #1b253a;
     color: white;
     font-size: 1.4rem;
@@ -19,7 +20,7 @@ h3 .webpage-Main {
     color: white;
     font-size: 1.2rem;
 }
-h4 .webpage-Main {
+.webpage-Main h3 h4{
     color: white;
     background-color: #1b253a;
     font-size: 1.2rem;
@@ -61,23 +62,11 @@ h4 .webpage-Main {
     grid-area: 1 / 4 / 3 / 9;
     background-color: #394e7c;
     color: white;
-    font-size: 1.6rem;
+    font-size: 2rem;
     cursor: text;
     border-radius: 5px;
 }
-/* .listItem-Author {
-    grid-area: 3 / 4 / 4 / 9;
-    background-color: rgb(240, 213, 140);
-    cursor: text;
-    
-} 
 
- .listItem-Review {
-    grid-area: 4 / 4 / 9 / 9;
-    overflow-y: scroll;
-    background-color: rgb(240, 140, 235);
-    cursor: text;
-} */
 .listItem-Desc {
     grid-area: 3 / 4 / 9 / 9;
     overflow-y: scroll;
