--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,7 +14,7 @@
   max-height: 100vh;
   width: 100vw;
   max-width: 100vw;
-  background-color: #282c34;
+  background-color: #1e2e4b;
 }
 
 .App-header {
