--- a/src/css/ListItem.css
+++ b/src/css/ListItem.css
@@ -1,18 +1,20 @@
 .item-Root {
     background-color: #1b253a;
     height: fit-content;
-    width: 100%;
+    min-width: fit-content;
+    max-width: 100%;
     margin-top: 2.5px;
     margin-bottom: 2.5px;
     min-height: 300px;
     border-radius: 5px;
-    
 }
 .item-Header {
     cursor: grab;
     background-color: #394e7c;
     color: white;
     font-size: 1.4rem;
+    min-width: fit-content;
+    max-width: 100%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
