--- a/src/css/ListWebpage.css
+++ b/src/css/ListWebpage.css
@@ -25,18 +25,21 @@ h3 .webpage-Main {
     background-color: #394e7c;
     font-size: 1.2rem;
     cursor: pointer;
+    max-width: fit-content;
 }
 
 .webpage-Data {
     display: grid;
+    margin-left: 15%;
+    margin-right: 15%;
     max-width: 70%;
     background-color: #1b253a;
-    overflow-y: scroll;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(10, 1fr);
+    grid-row-gap: 5px;
 }
 .listItem-Root {
-    background-color: #1b253a;
+    background-color: #282c34;
     height: 20rem;
     width: 100%;
     margin-top: 2.5px;
