--- a/src/css/Explore.css
+++ b/src/css/Explore.css
@@ -1,7 +1,7 @@
 .explore-Root{
     height: 95vh;
     width: 100%;
-    background-color: #1b253a;
+    background-color: #0B132B;
     color: white;
     font-size: 1.4rem;
 }
@@ -17,8 +17,8 @@
 }
 
 .completeList {
-    background-color: #394e7c;
-    color: white;
+    background-color: #5BC0BE;
+    color: black;
     font-size: 1.4rem;
     text-decoration: none;
     padding: 5px;
