--- a/src/css/List.css
+++ b/src/css/List.css
@@ -2,54 +2,60 @@
     margin-left: 15%;
     margin-right: 15%;
     border-radius: 10px;
-    display: grid;
-    height: 91vh;
+    display: flex;
     width: 70%;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(10, 1fr);
-    background-color: #1b253a;
-    overflow-y: scroll;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #0b132b;
 }
 .list-Header {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     height: fit-content;
-    min-width: fit-content;
+    max-width: 100%;
     justify-content: center;
-    background-color: #293e6d;
+    background-color: #1c2541;
     color: white;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
+    padding: 1.5em;
 }
 .list-Header img {
     font-size: 1rem;
+    max-width: 100%;
 }
 .createBtn { 
-    padding: 5px 15px;
+    min-width: fit-content;
+    padding: .4em;
 	margin: 0.5em;
-	background-color: white;
+	background-color: #5BC0BE;
     color: black;
 	border: 0;
 	border-radius: 5px;
 	font-size: 25px;
     cursor: pointer;
+    max-width: 100%;
 }
 .addGameBtn {
-    padding: 5px 15px;
+    padding: .4em;
 	margin: 0.5em;
-	background-color: white;
+	background-color: #5BC0BE;
     color: black;
 	border: 0;
 	border-radius: 5px;
-	font-size: 25px;
+	font-size: 1em;
     cursor: pointer;
+    max-width: 100%;
 }
 .username{
-    background-color: #1b253a;
+    background-color: #3A506B;
     color: white;
     border-radius: 10px;
+    max-width: 100%;
 }
 .title{
-    background-color: #1b253a;
+    background-color: #3A506B;
     color: white;
     border-radius: 10px;
+    max-width: 100%;
 }
