--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -2,13 +2,18 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #22252c;
+    background-color: #3A506B;
+    margin-bottom: 3em;
+}
+h1 .navbar {
+    font-size: 1.5rem;
+    color: white;
 }
 
 h4 {
     padding: 5px 15px;
 	margin: 0.5em;
-	background: #ffffff;
+	background: #5BC0BE;
 	border: 0;
 	border-radius: 5px;
 	font-size: 25px;
