--- a/src/css/ListWebpage.css
+++ b/src/css/ListWebpage.css
@@ -24,10 +24,12 @@ h3 .webpage-Main {
 .webpage-Main h3 h4{
     justify-content: center;
     color: white;
-    background-color: #394e7c;
+    background-color: #3A506B;
     font-size: 1.2rem;
     cursor: pointer;
     max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .webpage-Data {
@@ -65,8 +67,8 @@ h3 .webpage-Main {
 }
 .listItem-Title {
     grid-area: 1 / 4 / 3 / 9;
-    background-color: #394e7c;
-    color: white;
+    background-color: #6FFFE9;
+    color: black;
     font-size: 2rem;
     cursor: text;
     border-radius: 5px;
@@ -75,8 +77,8 @@ h3 .webpage-Main {
 .listItem-Desc {
     grid-area: 3 / 4 / 9 / 9;
     overflow-y: scroll;
-    background-color: #394e7c;
-    color: white;
+    background-color: #5BC0BE;
+    color: black;
     font-size: 1.4rem;
     cursor: text;
     border-radius: 5px;
