--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #3A506B;
+    background-color: #1C2541;
     margin-bottom: 3em;
 }
 h1 .navbar {
@@ -13,7 +13,7 @@ h1 .navbar {
 h4 {
     padding: 5px 15px;
 	margin: 0.5em;
-	background: #5BC0BE;
+	background: #6FFFE9;
 	border: 0;
 	border-radius: 5px;
 	font-size: 25px;
