Minor css changes. Changed proxy URL to localhost.

--- a/src/css/List.css
+++ b/src/css/List.css
@@ -30,7 +30,7 @@
     min-width: fit-content;
     padding: .4em;
 	margin: 0.5em;
-	background-color: #5BC0BE;
+	background-color: #6FFFE9;
     color: black;
 	border: 0;
 	border-radius: 5px;
@@ -41,7 +41,7 @@
 .addGameBtn {
     padding: .4em;
 	margin: 0.5em;
-	background-color: #5BC0BE;
+	background-color: #6FFFE9;
     color: black;
 	border: 0;
 	border-radius: 5px;
