--- a/src/css/List.css
+++ b/src/css/List.css
@@ -38,6 +38,9 @@
     cursor: pointer;
     max-width: 100%;
 }
+.createBtn:hover {
+    background-color: #5BC0BE;
+}
 .addGameBtn {
     padding: .4em;
 	margin: 0.5em;
@@ -48,6 +51,9 @@
 	font-size: 1em;
     cursor: pointer;
     max-width: 100%;
+}
+.addGameBtn:hover {
+    background-color: #5BC0BE;
 }
 .username{
     background-color: #3A506B;
