--- a/src/css/ListItem.css
+++ b/src/css/ListItem.css
@@ -74,4 +74,8 @@
     color: black;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 1.8em;
+}
+.item-Delete:hover {
+    background-color: #499c9b;
 }
